// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="padded it__hs-review-history"
>
  <label
    htmlFor="security-hotspot-comment"
  >
    hotspots.comment.field
  </label>
  <textarea
    className="form-field fixed-width width-100 spacer-bottom"
    id="security-hotspot-comment"
    onChange={[Function]}
    rows={2}
    value=""
  />
  <div
    className="display-flex-space-between display-flex-center "
  >
    <FormattingTips
      className="huge-spacer-bottom"
    />
    <div>
      <Button
        className="huge-spacer-bottom"
        id="hotspot-comment-box-submit"
        onClick={[Function]}
      >
        hotspots.comment.submit
      </Button>
    </div>
  </div>
  <h2
    className="spacer-top big-spacer-bottom"
  >
    hotspot.section.activity
  </h2>
  <HotspotReviewHistory
    hotspot={
      {
        "assignee": "assignee",
        "assigneeUser": {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": [],
        "comment": [],
        "component": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": [
          {
            "locations": [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": [
          {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
    onDeleteComment={[Function]}
    onEditComment={[Function]}
    onShowFullHistory={[Function]}
    showFullHistory={false}
  />
</div>
`;

exports[`should render correctly without user 1`] = `
<div
  className="padded it__hs-review-history"
>
  <h2
    className="spacer-top big-spacer-bottom"
  >
    hotspot.section.activity
  </h2>
  <HotspotReviewHistory
    hotspot={
      {
        "assignee": "assignee",
        "assigneeUser": {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": [],
        "comment": [],
        "component": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": [
          {
            "locations": [
              {
                "component": "main.js",
                "textRange": {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": [
          {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
    onDeleteComment={[Function]}
    onEditComment={[Function]}
    onShowFullHistory={[Function]}
    showFullHistory={false}
  />
</div>
`;
